api/gtkdoc_h/239/geany-gtkdoc.h


typedef enum {
	tm_tag_undef_t = 0,
	tm_tag_class_t = 1,
	tm_tag_enum_t = 2,
	tm_tag_enumerator_t = 4,
	tm_tag_field_t = 8,
	tm_tag_function_t = 16,
	tm_tag_interface_t = 32,
	tm_tag_member_t = 64,
	tm_tag_method_t = 128,
	tm_tag_namespace_t = 256,
	tm_tag_package_t = 512,
	tm_tag_prototype_t = 1024,
	tm_tag_struct_t = 2048,
	tm_tag_typedef_t = 4096,
	tm_tag_union_t = 8192,
	tm_tag_variable_t = 16384,
	tm_tag_externvar_t = 32768,
	tm_tag_macro_t = 65536,
	tm_tag_macro_with_arg_t = 131072,
	tm_tag_file_t = 262144,
	tm_tag_other_t = 524288,
	tm_tag_max_t = 1048575,
} TMTagType;
typedef struct PluginInfo PluginInfo;
typedef struct PluginCallback PluginCallback;
typedef struct GeanyPlugin GeanyPlugin;
typedef struct PluginFields PluginFields;
typedef struct PrintingPrefs PrintingPrefs;
typedef struct SidebarTreeviews SidebarTreeviews;
typedef struct _SpawnWriteData SpawnWriteData;
typedef struct StashGroup StashGroup;
typedef gconstpointer StashWidgetID;
typedef gint TMParserType;
typedef struct TMSourceFile TMSourceFile;
typedef struct TMTag TMTag;
typedef struct TMWorkspace TMWorkspace;
struct _SpawnWriteData {
	const gchar* ptr;
	gsize size;
};
struct GeanyPlugin {
	PluginInfo* info;
	GeanyData* geany_data;
	GeanyPluginFuncs* funcs;
	GeanyProxyFuncs* proxy_funcs;
	struct GeanyPluginPrivate* priv;
};
struct PluginCallback {
	const gchar* signal_name;
	GCallback callback;
	gboolean after;
	gpointer user_data;
};
struct PluginInfo {
	const gchar* name;
	const gchar* description;
	const gchar* version;
	const gchar* author;
};
struct TMSourceFile {
	TMParserType lang;
	char* file_name;
	char* short_name;
	GPtrArray* tags_array;
};
struct TMTag {
	char* name;
	TMTagType type;
	gint refcount;
	TMSourceFile* file;
	gulong line;
	gboolean local;
	guint pointerOrder;
	char* arglist;
	char* scope;
	char* inheritance;
	char* var_type;
	char access;
	char impl;
	TMParserType lang;
};
struct TMWorkspace {
	GPtrArray* global_tags;
	GPtrArray* source_files;
	GPtrArray* tags_array;
	GPtrArray* typename_array;
	GPtrArray* global_typename_array;
};
void plugin_show_configure (GeanyPlugin *plugin);
void stash_group_load_from_key_file (StashGroup *group, GKeyFile *keyfile);
void stash_group_save_to_key_file (StashGroup *group, GKeyFile *keyfile);
gboolean stash_group_load_from_file (StashGroup *group, const gchar *filename);
gint stash_group_save_to_file (StashGroup *group, const gchar *filename, GKeyFileFlags flags);
StashGroup* stash_group_new (const gchar *name);
void stash_group_free_settings (StashGroup *group);
void stash_group_free (StashGroup *group);
GType stash_group_get_type (void);
void stash_group_add_boolean (StashGroup *group, gboolean *setting, const gchar *key_name, gboolean default_value);
void stash_group_add_integer (StashGroup *group, gint *setting, const gchar *key_name, gint default_value);
void stash_group_add_string (StashGroup *group, gchar **setting, const gchar *key_name, const gchar *default_value);
void stash_group_add_string_vector (StashGroup *group, gchar ***setting, const gchar *key_name, const gchar **default_value);
void stash_group_display (StashGroup *group, GtkWidget *owner);
void stash_group_update (StashGroup *group, GtkWidget *owner);
void stash_group_add_toggle_button (StashGroup *group, gboolean *setting, const gchar *key_name, gboolean default_value, StashWidgetID widget_id);
void stash_group_add_spin_button_integer (StashGroup *group, gint *setting, const gchar *key_name, gint default_value, StashWidgetID widget_id);
void stash_group_add_combo_box (StashGroup *group, gint *setting, const gchar *key_name, gint default_value, StashWidgetID widget_id);
void stash_group_add_combo_box_entry (StashGroup *group, gchar **setting, const gchar *key_name, const gchar *default_value, StashWidgetID widget_id);
void stash_group_add_entry (StashGroup *group, gchar **setting, const gchar *key_name, const gchar *default_value, StashWidgetID widget_id);
void stash_group_add_widget_property (StashGroup *group, gpointer setting, const gchar *key_name, gpointer default_value, StashWidgetID widget_id, const gchar *property_name, GType type);
TMSourceFile* tm_source_file_new (const char *file_name, const char *name);
void tm_source_file_free (TMSourceFile *source_file);
GType tm_source_file_get_type (void);
GType tm_tag_get_type (void);