api/geany-1.0.vapi

		[CCode (cname = "plugin_show_configure")]
		[Version (since = "0.19.")]
		public void show_configure ();
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "PluginCallback", has_type_id = false)]
	[Compact]
	public class PluginCallback {
		public bool after;
		public weak GLib.Callback callback;
		public weak string signal_name;
		public void* user_data;
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "PluginFields", has_type_id = false)]
	[Compact]
	public class PluginFields {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class PluginFuncs {
		public weak Geany.PluginCallback callbacks;
		public Geany.cleanup cleanup;
		public Geany.help help;
		public Geany.init init;
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "PluginInfo", has_type_id = false)]
	[Compact]
	public class PluginInfo {
		public weak string author;
		public weak string description;
		public weak string name;
		public weak string version;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class Prefs {
		public weak string default_open_path;
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "PrintingPrefs", has_type_id = false)]
	[Compact]
	public class PrintingPrefs {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class Project {
		public weak string base_path;
		public weak string description;
		public weak string file_name;
		[CCode (array_length = false, array_null_terminated = true)]
		public weak string[] file_patterns;
		public weak string name;
		public void* priv;
		public int type;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class ProxyFuncs {
		public Geany.load load;
		public Geany.probe probe;
		public Geany.unload unload;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class SearchPrefs {
		public bool use_current_word;
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "SidebarTreeviews", has_type_id = false)]
	[Compact]
	public class SidebarTreeviews {
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "StashGroup", copy_function = "g_boxed_copy", free_function = "g_boxed_free", type_id = "stash_group_get_type ()")]
	[Compact]
	public class StashGroup {
		[CCode (cname = "stash_group_new", has_construct_function = false)]
		public StashGroup (string name);
		[CCode (cname = "stash_group_add_boolean")]
		public void add_boolean (bool setting, string key_name, bool default_value);
		[CCode (cname = "stash_group_add_combo_box")]
		public void add_combo_box (int setting, string key_name, int default_value, Geany.StashWidgetID widget_id);
		[CCode (cname = "stash_group_add_combo_box_entry")]
		public void add_combo_box_entry (string setting, string key_name, string default_value, Geany.StashWidgetID widget_id);
		[CCode (cname = "stash_group_add_entry")]
		public void add_entry (string setting, string key_name, string default_value, Geany.StashWidgetID widget_id);
		[CCode (cname = "stash_group_add_integer")]
		public void add_integer (int setting, string key_name, int default_value);
		[CCode (cname = "stash_group_add_spin_button_integer")]
		public void add_spin_button_integer (int setting, string key_name, int default_value, Geany.StashWidgetID widget_id);
		[CCode (cname = "stash_group_add_string")]
		public void add_string (string setting, string key_name, string? default_value);
		[CCode (cname = "stash_group_add_string_vector")]
		public void add_string_vector (string setting, string key_name, string default_value);
		[CCode (cname = "stash_group_add_toggle_button")]
		public void add_toggle_button (bool setting, string key_name, bool default_value, Geany.StashWidgetID widget_id);
		[CCode (cname = "stash_group_add_widget_property")]
		public void add_widget_property (void* setting, string key_name, void* default_value, Geany.StashWidgetID widget_id, string property_name, GLib.Type type);
		[CCode (cname = "stash_group_display")]
		public void display (Gtk.Widget owner);
		[CCode (cname = "stash_group_free")]
		public void free ();
		[CCode (cname = "stash_group_free_settings")]
		public void free_settings ();
		[CCode (cname = "stash_group_load_from_file")]
		public bool load_from_file (string filename);
		[CCode (cname = "stash_group_load_from_key_file")]
		public void load_from_key_file (GLib.KeyFile keyfile);
		[CCode (cname = "stash_group_save_to_file")]
		public int save_to_file (string filename, GLib.KeyFileFlags flags);
		[CCode (cname = "stash_group_save_to_key_file")]
		public void save_to_key_file (GLib.KeyFile keyfile);
		[CCode (cname = "stash_group_update")]
		public void update (Gtk.Widget owner);
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "TMSourceFile", copy_function = "g_boxed_copy", free_function = "g_boxed_free", type_id = "tm_source_file_get_type ()")]
	[Compact]
	public class TMSourceFile {
		public weak string file_name;
		public weak string short_name;
		public weak GLib.GenericArray<Geany.TMTag> tags_array;
		[CCode (cname = "tm_source_file_new", has_construct_function = false)]
		public TMSourceFile (string file_name, string name);
		[CCode (cname = "tm_source_file_free")]
		public void free ();
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "TMTag", copy_function = "g_boxed_copy", free_function = "g_boxed_free", type_id = "tm_tag_get_type ()")]
	[Compact]
	public class TMTag {
		public char access;
		public weak string arglist;
		public weak Geany.TMSourceFile file;
		public char impl;
		public weak string inheritance;
		public ulong line;
		public bool local;
		public weak string name;
		public weak string scope;
		public Geany.TMTagType type;
		public weak string var_type;
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "TMWorkspace", has_type_id = false)]
	[Compact]
	public class TMWorkspace {
		public weak GLib.GenericArray<Geany.TMTag> global_tags;
		public weak GLib.GenericArray<Geany.TMSourceFile> source_files;
		public weak GLib.GenericArray<Geany.TMTag> tags_array;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class TemplatePrefs {
		public weak string company;
		public weak string developer;
		public weak string initials;
		public weak string mail;
		public weak string version;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class ToolPrefs {
		public weak string browser_cmd;
		public weak string context_action_cmd;
		public weak string grep_cmd;
		public weak string term_cmd;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class ToolbarPrefs {
		public Gtk.ToolbarStyle icon_style;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class WrapLabel {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class WrapLabelClass {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	public struct LexerStyle {
		public int foreground;
		public int background;
		public bool bold;
		public bool italic;
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "SpawnWriteData", has_type_id = false)]
	public struct SpawnWriteData {
		public weak string ptr;
		public size_t size;
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "StashWidgetID")]
	[SimpleType]
	public struct StashWidgetID {
	}
	[CCode (cheader_filename = "geanyplugin.h", cname = "TMParserType")]
	[SimpleType]
	public struct TMParserType : int {
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_AUTOINDENT_", has_type_id = false)]
	public enum AutoIndent {
		NONE,
		BASIC,
		CURRENTCHARS,
		MATCHBRACES
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_BC_", has_type_id = false)]
	public enum BuildCmdEntries {
		LABEL,
		COMMAND,
		WORKING_DIR,
		CMDENTRIES_COUNT
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_GBG_", has_type_id = false)]
	public enum BuildGroup {
		FT,
		NON_FT,
		EXEC,
		COUNT
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_BCS_", has_type_id = false)]
	public enum BuildSource {
		DEF,
		FT,
		HOME_FT,
		PREF,
		PROJ_FT,
		PROJ,
		COUNT
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_", has_type_id = false)]
	public enum EncodingIndex {
		ENCODING_ISO_8859_1,
		ENCODING_ISO_8859_2,
		ENCODING_ISO_8859_3,
		ENCODING_ISO_8859_4,
		ENCODING_ISO_8859_5,
		ENCODING_ISO_8859_6,
		ENCODING_ISO_8859_7,
		ENCODING_ISO_8859_8,
		ENCODING_ISO_8859_8_I,
		ENCODING_ISO_8859_9,
		ENCODING_ISO_8859_10,
		ENCODING_ISO_8859_13,
		ENCODING_ISO_8859_14,
		ENCODING_ISO_8859_15,
		ENCODING_ISO_8859_16,
		ENCODING_UTF_7,
		ENCODING_UTF_8,
		ENCODING_UTF_16LE,
		ENCODING_UTF_16BE,
		ENCODING_UCS_2LE,
		ENCODING_UCS_2BE,
		ENCODING_UTF_32LE,
		ENCODING_UTF_32BE,
		ENCODING_ARMSCII_8,
		ENCODING_BIG5,
		ENCODING_BIG5_HKSCS,
		ENCODING_CP_866,
		ENCODING_EUC_JP,
		ENCODING_EUC_KR,
		ENCODING_EUC_TW,
		ENCODING_GB18030,
		ENCODING_GB2312,
		ENCODING_GBK,
		ENCODING_GEOSTD8,
		ENCODING_HZ,
		ENCODING_IBM_850,
		ENCODING_IBM_852,
		ENCODING_IBM_855,
		ENCODING_IBM_857,
		ENCODING_IBM_862,
		ENCODING_IBM_864,
		ENCODING_ISO_2022_JP,
		ENCODING_ISO_2022_KR,
		ENCODING_ISO_IR_111,
		ENCODING_JOHAB,
		ENCODING_KOI8_R,
		ENCODING_KOI8_U,
		ENCODING_SHIFT_JIS,
		ENCODING_TCVN,
		ENCODING_TIS_620,
		ENCODING_UHC,
		ENCODING_VISCII,
		ENCODING_WINDOWS_1250,
		ENCODING_WINDOWS_1251,
		ENCODING_WINDOWS_1252,
		ENCODING_WINDOWS_1253,
		ENCODING_WINDOWS_1254,
		ENCODING_WINDOWS_1255,
		ENCODING_WINDOWS_1256,
		ENCODING_WINDOWS_1257,
		ENCODING_WINDOWS_1258,
		ENCODING_NONE,
		ENCODING_CP_932,
		ENCODINGS_MAX
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_FILETYPE_GROUP_", has_type_id = false)]
	public enum FiletypeGroupID {
		NONE,
		COMPILED,
		SCRIPT,
		MARKUP,
		MISC,
		COUNT
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_", has_type_id = false)]
	public enum FiletypeID {
		FILETYPES_NONE,
		FILETYPES_PHP,
		FILETYPES_BASIC,
		FILETYPES_MATLAB,
		FILETYPES_RUBY,
		FILETYPES_LUA,
		FILETYPES_FERITE,
		FILETYPES_YAML,
		FILETYPES_C,
		FILETYPES_NSIS,
		FILETYPES_GLSL,
		FILETYPES_PO,
		FILETYPES_MAKE,
		FILETYPES_TCL,
		FILETYPES_XML,
		FILETYPES_CSS,
		FILETYPES_REST,
		FILETYPES_HASKELL,
		FILETYPES_JAVA,
		FILETYPES_CAML,
		FILETYPES_AS,
		FILETYPES_R,
		FILETYPES_DIFF,
		FILETYPES_HTML,
		FILETYPES_PYTHON,
		FILETYPES_CS,
		FILETYPES_PERL,
		FILETYPES_VALA,
		FILETYPES_PASCAL,
		FILETYPES_LATEX,
		FILETYPES_ASM,
		FILETYPES_CONF,
		FILETYPES_HAXE,
		FILETYPES_CPP,
		FILETYPES_SH,
		FILETYPES_FORTRAN,
		FILETYPES_SQL,
		FILETYPES_F77,
		FILETYPES_DOCBOOK,
		FILETYPES_D,
		FILETYPES_JS,
		FILETYPES_VHDL,
		FILETYPES_ADA,
		FILETYPES_CMAKE,
		FILETYPES_MARKDOWN,
		FILETYPES_TXT2TAGS,
		FILETYPES_ABC,
		FILETYPES_VERILOG,
		FILETYPES_FORTH,
		FILETYPES_LISP,
		FILETYPES_ERLANG,
		FILETYPES_COBOL,
		FILETYPES_OBJECTIVEC,
		FILETYPES_ASCIIDOC,
		FILETYPES_ABAQUS,
		FILETYPES_BATCH,
		FILETYPES_POWERSHELL,
		FILETYPES_RUST,
		FILETYPES_COFFEESCRIPT,
		FILETYPES_GO,
		FILETYPES_ZEPHIR,
		MAX_BUILT_IN_FILETYPES
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_FIND_SEL_", has_type_id = false)]
	public enum FindSelOptions {
		CURRENT_WORD,
		X,
		AGAIN
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_INDENT_TYPE_", has_type_id = false)]
	public enum IndentType {
		SPACES,
		TABS,
		BOTH
	}
	[CCode (cheader_filename = "geanyplugin.h", cprefix = "GEANY_INDICATOR_", has_type_id = false)]
	public enum Indicator {
		ERROR,
		SEARCH,
		SNIPPET
	}
